<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/activity_bg">

    <ProgressBar
        android:id="@+id/pre_activity_progress_bar"
        android:indeterminate="true"
        android:indeterminateTint="#FF000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerInParent="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pre_activity_logo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_pre_activity_logo" />

        <RelativeLayout
            android:id="@+id/pre_activity_auth_layout"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pre_activity_logo">

            <LinearLayout
                android:id="@+id/pre_activity_password_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/pre_activity_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="15dp"
                    android:hint="@string/NULL"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:background="@drawable/pre_activity_edittext_bg"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pre_activity_auth_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingHorizontal="70dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/pre_activity_password_layout"
                android:background="@drawable/pre_activity_login_bg"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>